@startuml

title __FRAGMENTS's Class Diagram__\n

  package ca.rededaniskal {
    package ca.rededaniskal.Activities {
      package ca.rededaniskal.Activities.Fragments {
        class Notifications_Fragment {
            {static} - ARG_PARAM1 : String
            {static} - ARG_PARAM2 : String
            - swipeContainer : SwipeRefreshLayout
            - mParam1 : String
            - mParam2 : String
            + Notifications_Fragment()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
            - returnToLogin()
        }
      }
    }
  }
  

  package ca.rededaniskal {
    package ca.rededaniskal.Activities {
      package ca.rededaniskal.Activities.Fragments {
        class getUserRequestsDB {
            - mAuth : FirebaseAuth
            - email : String
            - username : String
            - user : FirebaseUser
            - mDatabase : DatabaseReference
            - requestList : List<Request>
            ~ valueEventListener : ValueEventListener
            ~ valueEventListener1 : ValueEventListener
            ~ valueEventListener2 : ValueEventListener
            + getUserRequestsDB()
            + getRequestList()
            - getUserDetails()
            - getUserRequestSender()
            - getUserRequestRecipent()
        }
      }
    }
  }
  

  package ca.rededaniskal {
    package ca.rededaniskal.Activities {
      package ca.rededaniskal.Activities.Fragments {
        class Post_Feed_Fragment {
            {static} - ARG_PARAM1 : String
            {static} - ARG_PARAM2 : String
            - swipeContainer : SwipeRefreshLayout
            - mParam1 : String
            - mParam2 : String
            + Post_Feed_Fragment()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
        }
      }
    }
  }
  

  package ca.rededaniskal {
    package ca.rededaniskal.Activities {
      package ca.rededaniskal.Activities.Fragments {
        class Search_Fragment {
            {static} - ARG_PARAM1 : String
            {static} - ARG_PARAM2 : String
            - mParam1 : String
            - mParam2 : String
            ~ searchBy : Button
            ~ filterOptions : String[]
            ~ selectedOptions : boolean[]
            ~ chosenOptions : ArrayList<Integer>
            + Search_Fragment()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
        }
      }
    }
  }
  

  package ca.rededaniskal {
    package ca.rededaniskal.Activities {
      package ca.rededaniskal.Activities.Fragments {
        class View_Own_Profile_Fragment {
            {static} - ARG_PARAM1 : String
            {static} - ARG_PARAM2 : String
            - mParam1 : String
            - mParam2 : String
            - v : View
            + View_Own_Profile_Fragment()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
            + setTexts()
            - returnToLogin()
        }
      }
    }
  }
  

  package ca.rededaniskal {
    package ca.rededaniskal.Activities {
      package ca.rededaniskal.Activities.Fragments {
        class currentUserDetailsDB {
            - mAuth : FirebaseAuth
            - email : String
            - username : String
            - location : String
            - phone : String
            - user : FirebaseUser
            - mDatabase : DatabaseReference
            - userList : List<User>
            ~ valueEventListener : ValueEventListener
            + currentUserDetailsDB()
            - getUserDetails()
        }
      }
    }
  }
  

  Notifications_Fragment -up-|> Fragment
  Notifications_Fragment o-- getUserRequestsDB : db
  Notifications_Fragment +-down- getUserRequestsDB
  SavedState -up-|> Parcelable
  Post_Feed_Fragment -up-|> Fragment
  SavedState -up-|> Parcelable
  Search_Fragment -up-|> Fragment
  SavedState -up-|> Parcelable
  View_Own_Profile_Fragment -up-|> Fragment
  View_Own_Profile_Fragment o-- currentUserDetailsDB : db
  View_Own_Profile_Fragment +-down- currentUserDetailsDB
  SavedState -up-|> Parcelable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
